# pbg-amici

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  NEXT_STEPS.md  README.md  index.html  pyproject.toml  workspace.yaml
.github/workflows/: build-and-push.yml  release.yml
demo/: demo_report.py
pbg_amici/: __init__.py  processes.py
pbg_amici/composites/: __init__.py  _decorator.py  exponential_decay.py  lotka_volterra.py  mapk_cascade.py
reports/: index.html
tests/: test_composites.py  test_processes.py
