[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "pbg-amici"
version = "0.1.0"
description = "Process-bigraph wrapper for AMICI (Advanced Multilanguage Interface to CVODES and IDAS)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "pbg-amici authors", email = "noreply@example.com"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "bigraph-schema>=0.0.60",
    "process-bigraph>=0.0.66",
    "amici>=1.0",
    "antimony>=2.13",
    "numpy",
    "bigraph-viz>=2.0.3",
    "pyyaml>=6.0",
    "jsonschema[format-nongpl]>=4.21",
    "jinja2>=3.1",
    "pypdf>=4.0",
    "matplotlib",
    "plotly",
    "vivarium-dashboard",
]

[project.optional-dependencies]
# ninja provides the build backend AMICI invokes to compile each model's C++
# extension at runtime; the bridge tests compile real models, so it must be on
# PATH (amici pulls cmake-build-extension but not ninja itself).
dev = ["pytest", "matplotlib", "plotly", "bigraph-viz", "ninja"]

[project.urls]
Homepage = "https://github.com/vivarium-collective/pbg-amici"
Upstream = "https://github.com/AMICI-dev/AMICI"
Issues = "https://github.com/vivarium-collective/pbg-amici/issues"

[tool.hatch.build.targets.wheel]
packages = ["pbg_amici"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# AMICI dumps a compiled package per model under amici_models/; pytest
# must not try to collect those as test files.
norecursedirs = ["amici_models", ".pbg", "investigations", "demo"]

# vivarium-dashboard isn't on PyPI; pin it to its public git repo so this
# source is portable across CI, Docker, and collaborators' machines. For local
# dev against a sibling checkout, override with an editable install into your
# venv (no committed local path required):
#     uv pip install -e ../vivarium-dashboard
[tool.uv.sources]
vivarium-dashboard = { git = "https://github.com/vivarium-collective/vivarium-dashboard.git", branch = "main" }
